# AnimeMaster_Engine

./: .gitattributes  .gitignore  .metadata  CHANGELOG.md  README.md  ROADMAP.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: online_sources.json
example/: .gitignore  README.md  RELEASE.md  pubspec.yaml
example/android/: key.properties.example
example/android/app/: build.gradle.kts  proguard-rules.pro
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/tool/: build_release.ps1  write_update_manifest.ps1
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: animemaster.podspec
ios/Classes/: animemaster.mm
lib/: animemaster.dart  animemaster_bindings_generated.dart
lib/src/: animemaster_app.dart  app_shell.dart
release/: app_update.json
src/: CMakeLists.txt  animemaster.cpp  animemaster.h
test/: bangumi_gateway_config_test.dart  episode_helpers_test.dart  format_helpers_test.dart  task_title_parser_test.dart
test/models/: app_update_info_test.dart  episode_test.dart
test/providers/: settings_provider_test.dart
test/services/: app_update_service_test.dart
test/viewmodels/: home_view_model_test.dart  search_view_model_test.dart
tools/bangumi_auth_gateway/: server.mjs
tools/bangumi_auth_worker/: README.md  worker.js  wrangler.toml  wrangler.toml.example
(+85 files in other folders)
